--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "pabloprost",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.17"
